add new code database

--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -11,7 +12,8 @@
     </header>
     <main>
         <section>
-            <h2>Nguyễn Quốc Tài</h2>
+            <h2>Nguyễn Quốc Tài 123123</h2>
+            <img class="img_demo" src="/image/logNhiDong.png" alt="logo nhi dong">
         </section>
     </main>
     <footer>
